[package]
name = "dxfilter"
version = "0.5.8"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Process textures with DirectX shaders. Includes few Scale, Color conversion filters and utils to make your own."
repository = "https://github.com/rhinostream/dxfilter-rs.git"
authors = [
    "Krishna Chaitanya <kittuov@gmail.com>",
]
categories = ["rendering::graphics-api", "os::windows-apis", "hardware-support", "graphics", "multimedia"]
keywords = ["directx", "shader", "filter", "scale", "color"]
homepage = "https://github.com/rhinostream/dxfilter-rs"
documentation = "https://rhinostream.github.io/dxfilter-rs"
include = [
    "/shader_macro/src",
    "/shader_macro/Cargo.toml",
    "/shader_macro/Cargo.lock",
    "/src",
    "Cargo.toml",
    "README.md",
    "LICENCE.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "shader_macro"
]

[lib]
name = "dxfilter"
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doc = true             # Is documented by default.
edition = "2021"       # The edition of the target.
crate-type = ["lib"]   # The crate types to generate.


[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]


[dependencies]
win_desktop_duplication = "0.10.4"
syn = { version = "1.0.98", features = ["full", "fold"] }
quote = "1.0.20"
shader_macro = { version = "0.4.1" }

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_Graphics_Direct3D11",
]