[package]
name = "shader_macro"
version = "0.4.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "use this macro from dxfilter crate"
repository = "https://github.com/rhinostream/dxfilter-rs.git"
authors = [
    "Krishna Chaitanya <kittuov@gmail.com>",
]
homepage = "https://github.com/rhinostream/dxfilter-rs"
documentation = "https://docs.rs/dxfilter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["aarch64-pc-windows-msvc", "i686-pc-windows-msvc", "x86_64-pc-windows-msvc"]

[dependencies]
syn = { version = "2.0.66", features = ["full", "parsing", "printing"] }
quote = "1.0.23"
proc-macro2 = "1.0.51"

[dependencies.windows]
version = "0.57.0"
features = [
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Hlsl",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
]